--- a/assets/package.json
+++ b/assets/package.json
@@ -29,10 +29,16 @@
     "cssnano": "^6.0.3",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^9.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "sass-loader": "^13.3.3",
+    "sass-mq": "^5.0.1",
     "style-loader": "^3.3.3",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "sass": "^1.69.7"
   }
 }
