--- a/assets/package.json
+++ b/assets/package.json
@@ -22,12 +22,26 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
+    "@wordpress/base-styles": "^4.39.0",
+    "@wordpress/block-editor": "^12.16.0",
+    "@wordpress/blocks": "^12.25.0",
+    "@wordpress/components": "^25.14.0",
+    "@wordpress/compose": "^6.25.0",
+    "@wordpress/data": "^9.18.0",
+    "@wordpress/dependency-extraction-webpack-plugin": "^4.31.0",
+    "@wordpress/element": "^5.25.0",
+    "@wordpress/eslint-plugin": "^17.5.0",
+    "@wordpress/hooks": "^3.48.0",
+    "@wordpress/i18n": "^4.48.0",
+    "@wordpress/icons": "^9.39.0",
+    "@wordpress/server-side-render": "^4.25.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.3",
     "file-loader": "^6.2.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
