--- a/assets/package.json
+++ b/assets/package.json
@@ -34,6 +34,7 @@
     "@wordpress/hooks": "^3.48.0",
     "@wordpress/i18n": "^4.48.0",
     "@wordpress/icons": "^9.39.0",
+    "@wordpress/scripts": "^27.0.0",
     "@wordpress/server-side-render": "^4.25.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
