--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
     "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
-    "clean": "rm -rf build/*"
+    "clean": "rm -rf build/*",
+    "svg": "svgr -d src/js/icons src/icons",
+    "lint": "eslint src/js/*",
+    "lint:fix": "eslint --fix src/js/*"
   },
   "keywords": [
     "wordpress",
@@ -22,6 +25,7 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
+    "@svgr/cli": "^8.1.0",
     "@wordpress/base-styles": "^4.39.0",
     "@wordpress/block-editor": "^12.16.0",
     "@wordpress/blocks": "^12.25.0",
@@ -41,6 +45,9 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.3",
+    "eslint": "^8.56.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-jsdoc": "^48.0.2",
     "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
