--- a/assets/package.json
+++ b/assets/package.json
@@ -9,7 +9,9 @@
     "clean": "rm -rf build/*",
     "svg": "svgr -d src/js/icons src/icons",
     "lint": "eslint src/js/*",
-    "lint:fix": "eslint --fix src/js/*"
+    "lint:fix": "eslint --fix src/js/*",
+    "lint-css": "stylelint 'src/sass/**/*.scss'",
+    "lint-css:fix": "npm run lint-css -- --fix"
   },
   "keywords": [
     "wordpress",
@@ -56,6 +58,9 @@
     "sass-loader": "^13.3.3",
     "sass-mq": "^5.0.1",
     "style-loader": "^3.3.3",
+    "stylelint": "^16.2.0",
+    "stylelint-config-wordpress": "^17.0.0",
+    "stylelint-webpack-plugin": "^4.1.1",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
