--- a/assets/package.json
+++ b/assets/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "zustand": "^4.5.0"
   }
 }
